chore(nginx): configuration of the new version of uri

--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,15 @@ server {
 	}
 
   # 匹配你要公开别人访问的简历，访问参数校验，符合的才允许查看
+  # 新版本uri
+  location ~ ^/xxxx/[^/]+/([a-zA-Z0-9_]+)$ {
+    set $t $1;
+    if ($t !~ ^(key_word1|key_word2)$) {
+      return 403;
+    }
+    include resume_proxy;
+  }
+  # 旧版本uri
 	location = /xxxx/xxxx {
 		if ($arg_t !~ ^(key_word1|key_word2)$) {
 			return 403;
